--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 <tr>
 <td colspan="2">(
 <font size="4"><b>
-							<a href="#">Головна</a>&nbsp;&nbsp;
-							<a href="#">Фотогалерея</a>&nbsp;&nbsp;
-							<a href="#">Телефони</a>&nbsp;&nbsp;
-							<a href="#">Статистика</a>&nbsp;&nbsp;
-							<a href="#">Зареєстровані</a>&nbsp;&nbsp;
+							<a href="#">Головна</a>
+							<a href="#">Фотогалерея</a>
+							<a href="#">Телефони</a>
+							<a href="#">Статистика</a>
+							<a href="#">Зареєстровані</a>
 							</b></font>
 							</td>
 </tr>
@@ -39,6 +39,8 @@
 </tr>
 <tr>
 <td colspan="2" valign="middle" height="90">(Низ сайта)</td>
+<font size="4">Сайт розробив "Тарас Веремчук"</font>
+</td>
 </tr>
 </table>
 </BODY>
