--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 </tr>
 <tr>
 <td colspan="2" valign="middle" height="90">(Низ сайта)</td>
-<font size="4">Сайт розробив "Тарас Веремчук"</font>
+<font size="4">Сайт розробив "Веремчук Тарас"</font>
 </td>
 </tr>
 </table>
