--- a/index.html
+++ b/index.html
@@ -2,12 +2,19 @@
 <HEAD>
 <meta charset="utf-8">
 <title>Сайт web-студії "Web-DECO"</title>
+<style>
+	.shadowtext {
+		text-shadow: 1px 3px 2px white, 0 0 1em red;
+		color: #210042;
+		font-size: 2em;
+		}
+</style>		
 </HEAD>
 <BODY background="images/bg.jpg">
 <table border="1" align="center" cellpadding="10">
 <tr>
 <td colspan="2" height="150" align="right">
-<font size="5"><h1>Сайт web-студії "Web-DECO"</h1></font>
+<font size="5"><h1>Сайт web-студії "Web-DECO"</h1 class="shadowtext"></font>
 </td>
 </tr>
 <tr>
