10 - Добавити фон заголовка

--- a/index.html
+++ b/index.html
@@ -13,11 +13,10 @@
 <BODY background="images/bg.jpg">
 <table border="1" align="center" cellpadding="10">
 <tr>
-<td colspan="2" height="150" align="right">
-<font size="5"><h1>Сайт web-студії "Web-DECO"</h1 class="shadowtext"></font>
-</td>
-</tr>
-<tr>
+			<td background="images/bg-3.jpg" colspan="2" height="150" aling="right" hspace="5">
+			<font size="5" color="Maroon"><h1 class="shadowtext">Сайт web-студії "Web-DECO"</h1></font>
+		</tr>
+		<tr>
 <td colspan="2">(
 <font size="4"><b>
 							<a href="#">Головна</a>
