--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <td width="70%">(Текст сайта)</td>
 </tr>
 <tr>
-<td colspan="2" valign="middle" height="90">(Низ сайта)</td>
+<td background="images/bg-3.jpg" colspan="2" valign="middle" height="90">
 <font size="4">Сайт розробив "Веремчук Тарас"</font>
 </td>
 </tr>
