--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <li>зробити сайт якісно</li>
     <li>зробити сайт недорого</li>
     <li>зробити сайт швидко</li>
-    <li>зробити сайт ефективно</li>
+    <li>зробити сайт eфективно</li>
 </ul>
 </p>
 <p>Ми будемо раді стати Вам у нагоді і створити веб-сайт, якісний і привабливий для відвідувача. Вебстудія Web-DECO надає цілий комплекс послуг з проектування сайтів, дизайну сайтів і розробки сайтів.</p>
