--- a/index.html
+++ b/index.html
@@ -40,8 +40,40 @@
 				<p aling="right"><a href="#">інші....</a></p>
 			</ul>
 			</font>
+<hr>
+<H1 aling="center"><font color="green">Реєстрація</font></H1>
+ <form action="forma.php" method="post" onsumbit="return send();">
+  <TABLE aling="center" bgcolor="#ccc">
+	<TR>
+			<TD><font color="green">Призвіще</font>: </TD>
+			<TD><input type="text" size="10" maxlength="20" name="name2"> </TD>
+	</TR>    
+    <TR>
+            <TD><font color="green">Призвище</font>: </TD>
+            <TD><input type="text" size="10" maxlength="20" name="name2"> </TD>
+    </TR> 
+    <TR>
+            <TD><font color="green">Ім’я</font>: </TD>
+            <TD><input type="text" size="10" maxlength="20" name="name1"> </TD>
+    </TR> 
+    <TR>
+            <TD><font color="green">E-mail</font>: </TD>
+            <TD><input type="email" size="10" maxlength="20" name="email"> </TD>
+    </TR>  
+    <TR>
+            <TD><font color="green">Пароль</font>: </TD>
+            <TD><input type="password" size="10" maxlength="20" name="password"> </TD>
+    </TR>
+  </TABLE>
+<p aling="center">
+<input type="sumbit" value="Зареєструватись" >
+<input type="reset" value="Очистити" >
+</p>
+ </form>
+</hr> 
 			</td>
-<td width="70%">
+			
+			<td background="image/bg3-3.jpg" width="70%">
 <p>Зробити сайт з нами легко</p>
 <p>Створення власного сайту - це не тільки прерогатива великого бізнесу. Інтернет відкриває широкі можливості в першу чергу для малого бізнесу, для приватної підприємницької ініціативи. Адже, при започаткуванні власної справи розробка сайту потребує зовсім невеликих інвестицій, у порівнянні з іншими видами витрат. Створити сайт, в більшості випадків - це значно дешевше, наприклад, ніж оренда офісу, чи витрати на зарплату працівників.</p>
 <p>Якщо Вам потрібно якісно створити сайт, який максимально буде відповідати своєму призначенню, то Ви завітали за вірною адресою!</p>
